# cubevoid

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CubeVoid.sln  CubeVoid.vcxproj  CubeVoid.vcxproj.filters  README.md  conanfile.txt  configure.sh
3rd/glew/: .gitignore  glew.vcxproj  glew.vcxproj.filters  unzip.bat
3rd/lua/: .gitignore  lua.vcxproj  unzip.bat
3rd/sdl2/: .gitignore  sdl2.vcxproj  sdl2.vcxproj.filters  unzip.bat
games/cubevoid/: CubeVoidGame.vcxproj  main.cpp
include/: .gitignore  log.hpp  math.hpp  render.h  render.hpp  shader.cpp  shader.h  shader.hpp  shader_program.hpp  simulation.h  util.h
install/: .gitignore
projects/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  testtest.cpp
projects/core/: Core.vcxproj  Core.vcxproj.filters  camera.cpp  camera.hpp  file.hpp  log.cpp  log.hpp  mat.hpp  math.hpp  mesh.cpp  mesh.hpp  vec.hpp  vertex.hpp
projects/cubevoid/: CubeVoid.vcxproj  CubeVoid.vcxproj.filters  main.cpp  simulation.cpp  simulation.hpp
projects/render_manager/: RenderManager.vcxproj  RenderManager.vcxproj.filters  render.cpp  render.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp
solutions/CubeVoid/: CubeVoid.sln  CubeVoid.vcxproj  CubeVoid.vcxproj.filters
solutions/SDL2/: SDL2.vcxproj
src/: .gitignore  main.cpp  render.cpp  shader.cpp  shader_program.cpp  simulation.cpp
src/3rd/: CMakeLists.txt
src/core/: CMakeLists.txt  file.h  log.cpp  log.h  mat.cpp  (+9 more)
src/games/cubevoid/: CMakeLists.txt  main.cpp
src/games/cubevoid/install/assets/shaders/: shader.frag  shader.vert
(+34 files in other folders)
